# runtime

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile
.claude/skills/speckit-analyze/: SKILL.md
.claude/skills/speckit-checklist/: SKILL.md
.claude/skills/speckit-clarify/: SKILL.md
.claude/skills/speckit-constitution/: SKILL.md
.claude/skills/speckit-taskstoissues/: SKILL.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-dev-environment/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-sdg-schema-loader/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
crates/aggregate-engine/: Cargo.toml
crates/api-surface/: Cargo.toml
crates/event-store/: Cargo.toml
crates/middleware/: Cargo.toml
crates/observability/: Cargo.toml
crates/projections/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: main.rs
crates/sdg-loader/: Cargo.toml
crates/sdg-loader/fixtures/: invalid_context_path.sdg.json  invalid_dag_cycle.sdg.json  invalid_dangling_edge.sdg.json  invalid_duplicate_node.sdg.json  invalid_edge_type_mismatch.sdg.json  invalid_implicit_field.sdg.json  invalid_missing_required.sdg.json  invalid_port_name.sdg.json  invalid_state_reference.sdg.json  invalid_type_mismatch.sdg.json  invalid_unknown_node_type.sdg.json  invalid_version.sdg.json  valid_task_tracker.sdg.json
crates/sdg-loader/src/: error.rs  lib.rs  schema.rs  sdg_schema.json  suggestions.rs  types.rs
crates/sdg-loader/src/validation/: dag_pass.rs  mod.rs  schema_pass.rs  semantic_pass.rs  version_pass.rs
crates/sdg-loader/tests/: integration.rs
specs/003-sdg-v2-format/: spec.md
specs/003-sdg-v2-format/examples/: task-tracker-extended.sdg.json
