[workspace]
resolver = "2"
members = [
    "crates/runtime",
    "crates/sdg-loader",
    "crates/event-store",
    "crates/aggregate-engine",
    "crates/projections",
    "crates/api-surface",
    "crates/middleware",
    "crates/observability",
]

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["full"] }
rusqlite = { version = "0.39", features = ["bundled", "serde_json", "uuid"] }
axum = "0.8"
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0"
jsonschema = "0.45"
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"

# Graph
petgraph = "0.8"

# HTTP / API Surface
axum-extra = { version = "0.12", features = ["typed-header", "query", "json-deserializer"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "request-id", "timeout", "catch-panic"] }
utoipa = "5.4"
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Auth
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-otlp = "=0.31.0"
tracing-opentelemetry = "0.32"

# Migrations
rusqlite_migration = "2.5"

# Validation
semver = { version = "1.0", features = ["serde"] }
strsim = "0.11"

# Dev/Test
insta = { version = "1.47", features = ["json", "redactions"] }
tempfile = "3.27"
tokio-test = "0.4"
assert_matches = "1.5"

# Internal crates (for binary crate to depend on)
sdg-loader = { path = "crates/sdg-loader" }
event-store = { path = "crates/event-store" }
aggregate-engine = { path = "crates/aggregate-engine" }
projections = { path = "crates/projections" }
api-surface = { path = "crates/api-surface" }
middleware = { path = "crates/middleware" }
observability = { path = "crates/observability" }
