[package]
name = "api-surface"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio-test = { workspace = true }
