[package]
name = "sdg-loader"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
